@@ -11,8 +11,6 @@ class TestStore:
         env.setup_data_1k_1m()
         HttpdConf(env).add_vhost_test1().install()
         assert env.apache_restart() == 0
-        yield
-        assert env.apache_stop() == 0
 
     def check_h2load_ok(self, env, r, n):
         assert 0 == r.exit_code
